# ZELL

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  slop.md
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: backend.yml  docker-publish.yml  frontend.yml  pre-commit.yml  publish-ghrc.yml
backend/: .gitignore  Dockerfile  main.py  pyproject.toml
backend/app/data/: World Country and USA States Latitude Longitude.csv  landmarks.py
backend/app/services/: batch_generator.py  cache.py  compiler.py  llm.py  llm_persona_generator.py  persona_generator.py  profile_generator.py  report_export.py  report_template.html  search.py
backend/app/services/report_ui/: report_app.jsx  report_components.jsx  report_hooks.jsx  report_tokens.jsx
backend/app/simulation/: __init__.py  agent.py  aggregator.py  db.py  executor.py  memory.py  orchestrator.py  store.py
docs/: SELF_HOSTING.md
frontend/: .env.example  .gitignore  Dockerfile  components.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  TODO.md  index.css  main.tsx
frontend/src/components/: AgentCard.tsx  AtlasView.tsx  ChatWorkbench.tsx  CollapsibleSection.tsx  ControlPanel.tsx  EventDashboard.tsx  GraphPanel.tsx  MarkdownRenderer.tsx  ResponseCardCompact.tsx  ResponseCardVertical.tsx  WorldMap.tsx
frontend/src/lib/: api.ts
(+2 files in other folders)
